adding h2